# Django-Setting-Init

./: .gitignore  manage.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
config/: asgi.py  root_urls.py  wsgi.py
config/common/base/: exception.py  response.py
config/common/exceptions/: exceptions.py  handler.py
config/settings/: base.py  dev.py  local.py
